Feat: Finalize GUI and algo